--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="descr descr_default active" data-taste="fua-gra">
-                    Чего сидишь? Порадуй котэ, <a href="#" class="descr__ink">купи.</a>
+                    Чего сидишь? Порадуй котэ, <a href="#" class="descr__link">купи.</a>
                 </div>
                 <div class="descr descr_selected" data-taste="fua-gra">
                     Печень утки разварная с артишоками.
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="descr descr_default active" data-taste="fish">
-                    Чего сидишь? Порадуй котэ, <a href="#" class="descr__ink">купи.</a>
+                    Чего сидишь? Порадуй котэ, <a href="#" class="descr__link">купи.</a>
                 </div>
                 <div class="descr descr_selected" data-taste="fish">
                     Головы щучьи с чесноком да свежайшая сёмгушка.
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="descr descr_default active" data-taste="chiken">
-                    Чего сидишь? Порадуй котэ, <a href="#" class="descr__ink">купи.</a>
+                    Чего сидишь? Порадуй котэ, <a href="#" class="descr__link">купи.</a>
                 </div>
                 <div class="descr descr_selected" data-taste="chiken">
                     Филе из цыплят с трюфелями в бульоне.
