--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
 
             <div class="item">
 
-                <div class="cart is-default" data-taste="fua-gra">
-                    <div class="cart__box" data-taste="fua-gra">
+                <div class="cart is-default">
+                    <div class="cart__box">
                         <div class="cart__main">
                             <div class="cart__info">
-                                <div class="cart__subtitle cart__subtitle_default active" data-taste="fua-gra">Сказочное
+                                <div class="cart__subtitle cart__subtitle_default active">Сказочное
                                     заморское яство</div>
-                                <div class="cart__subtitle cart__subtitle_hover" data-taste="fua-gra">Котэ не
+                                <div class="cart__subtitle cart__subtitle_hover">Котэ не
                                     одобряет?</div>
                                 <h2 class="cart__header">Нямушка</h2>
                                 <div class="cart__taste">с фуа-гра</div>
@@ -31,7 +31,7 @@
                                     порций мышь в подарок
                                 </div>
                             </div>
-                            <div class="cart__round" data-taste="fua-gra">
+                            <div class="cart__round">
                                 <div class="cart__weight">
                                     <div>0,5</div>
                                     <p>кг</p>
@@ -41,13 +41,13 @@
                     </div>
                 </div>
 
-                <div class="descr descr_default active" data-taste="fua-gra">
+                <div class="descr descr_default active">
                     Чего сидишь? Порадуй котэ, <a href="#" class="descr__link">купи.</a>
                 </div>
-                <div class="descr descr_selected" data-taste="fua-gra">
+                <div class="descr descr_selected">
                     Печень утки разварная с артишоками.
                 </div>
-                <div class="descr descr_disabled" data-taste="fua-gra">
+                <div class="descr descr_disabled">
                     Печалька, с фуа-гра закончился.
                 </div>
 
@@ -55,13 +55,13 @@
 
             <div class="item">
 
-                <div class="cart is-default" data-taste="fish">
-                    <div class="cart__box" data-taste="fish">
+                <div class="cart is-default">
+                    <div class="cart__box">
                         <div class="cart__main">
                             <div class="cart__info">
-                                <div class="cart__subtitle cart__subtitle_default active" data-taste="fish">Сказочное
+                                <div class="cart__subtitle cart__subtitle_default active">Сказочное
                                     заморское яство</div>
-                                <div class="cart__subtitle cart__subtitle_hover" data-taste="fish">Котэ не одобряет?
+                                <div class="cart__subtitle cart__subtitle_hover">Котэ не одобряет?
                                 </div>
                                 <h2 class="cart__header">Нямушка</h2>
                                 <div class="cart__taste">с рыбой</div>
@@ -70,7 +70,7 @@
                                     <span>2</span> мыши в подарок
                                 </div>
                             </div>
-                            <div class="cart__round" data-taste="fish">
+                            <div class="cart__round">
                                 <div class="cart__weight">
                                     <div>2</div>
                                     <p>кг</p>
@@ -80,26 +80,26 @@
                     </div>
                 </div>
 
-                <div class="descr descr_default active" data-taste="fish">
-                    Чего сидишь? Порадуй котэ, <a href="#" class="descr__link">купи.</a>
+                <div class="descr descr_default active">
+                    Чего сидишь? Порадуй котэ, <a href=" #" class="descr__link">купи.</a>
                 </div>
-                <div class="descr descr_selected" data-taste="fish">
+                <div class="descr descr_selected">
                     Головы щучьи с чесноком да свежайшая сёмгушка.
                 </div>
-                <div class="descr descr_disabled" data-taste="fish">
+                <div class=" descr descr_disabled">
                     Печалька, с рыбой закончился.
                 </div>
             </div>
 
             <div class="item">
 
-                <div class="cart is-default" data-taste="chiken">
-                    <div class="cart__box" data-taste="chiken">
+                <div class="cart is-default">
+                    <div class="cart__box">
                         <div class="cart__main">
                             <div class="cart__info">
-                                <div class="cart__subtitle cart__subtitle_default active" data-taste="chiken">Сказочное
+                                <div class="cart__subtitle cart__subtitle_default active">Сказочное
                                     заморское яство</div>
-                                <div class="cart__subtitle cart__subtitle_hover" data-taste="chiken">Котэ не
+                                <div class="cart__subtitle cart__subtitle_hover">Котэ не
                                     одобряет?</div>
                                 <h2 class="cart__header">Нямушка</h2>
                                 <div class="cart__taste">с курой</div>
@@ -111,7 +111,7 @@
                                     заказчик доволен
                                 </div>
                             </div>
-                            <div class="cart__round" data-taste="chiken">
+                            <div class="cart__round">
                                 <div class="cart__weight">
                                     <div>5</div>
                                     <p>кг</p>
@@ -121,13 +121,13 @@
                     </div>
                 </div>
 
-                <div class="descr descr_default active" data-taste="chiken">
-                    Чего сидишь? Порадуй котэ, <a href="#" class="descr__link">купи.</a>
+                <div class="descr descr_default active">
+                    Чего сидишь? Порадуй котэ, <a href="#">купи.</a>
                 </div>
-                <div class="descr descr_selected" data-taste="chiken">
+                <div class="descr descr_selected">
                     Филе из цыплят с трюфелями в бульоне.
                 </div>
-                <div class="descr descr_disabled" data-taste="chiken">
+                <div class="descr descr_disabled">
                     Печалька, с курой закончился.
                 </div>
             </div>
